# flexible-cmake-modules

./: .gitignore  CMakeLists.txt  CMakePresets.json  Common.cmake  Common.cmake.in  CompilerOptions.cmake  Dependencies.cmake.in  DeveloperMode.cmake  DeveloperMode.cmake.in  Externals.cmake  FcmInclude.cmake.in  FcmInit.cmake  Include.cmake.in  InitFCM.cmake  LICENSE  README.md  Variables.cmake  Variables.cmake.in
__tests/: .gitignore
benchmarks/: CMakeLists.txt
cmake/: Benchmarking.cmake  BuildOptions.cmake  Common.cmake  CompilerOptions.cmake  Coverage.cmake  CxxStandard.cmake  DeveloperMode.cmake  Docs.cmake  Externals.cmake  Formatting.cmake  InstallRules.cmake  Testing.cmake  Variables.cmake
common/: Debug.cmake  Debug.cmake.in  FCMConfigurationVariables.cmake.in  FcmConfigVariables.cmake.in  Guards.cmake  Guards.cmake.in  HostInfo.cmake  Internal.cmake  Miscellaneous.cmake  Miscellaneous.cmake.in  ParseArgs.cmake.in  Project.Cache.cmake.in  Project.Target.cmake.in  Project.Targets.cmake.in  Project.cmake  Watchers.cmake  Watchers.cmake.in  __Internal.cmake
compiler/: C.Options.cmake  CXX.Options.cmake  Common.cmake  Common.cmake.in  CxxOptions.cmake  Gnu.C.Options.cmake  Gnu.CXX.Options.cmake  Gnu.CxxOptions.cmake  Msvc.C.Options.cmake  Msvc.CXX.Options.cmake  Msvc.CxxOptions.cmake
cxx_compiler/: Common.cmake  Gnu.Options.cmake  Options.cmake
dependencies/: Benchmarking.cmake  Ccache.cmake  Ccache.cmake.in  ClangFormat.cmake.in  Common.cmake  Common.cmake.in  Coverage.cmake  Docs.cmake  Doxygen.cmake.in  Formatting.cmake  GoogleBenchmark.cmake.in  (+6 more)
(+20 files in other folders)
