no_in_source_builds_guard()
cxx_standard_guard()


#[=============================================================================[
  TODO(?): add your benchmarks; for the google benchmark library link your
  target as `target_link_libraries(<target> PRIVATE benchmark::benchmark)`
#]=============================================================================]
